添加反射测试
Signed-off-by: Chris Cai <361389383@qq.com>